<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/text_city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Edmonton"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_back"
        app:layout_goneMarginEnd="8dp"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:text="BACK"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>